--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,21 +1,13 @@
 <resources>
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
+        <item name="colorPrimary">@color/darkorchid</item>
+        <item name="colorPrimaryDark">@android:color/transparent</item>
+        <item name="android:windowBackground">@null</item>
+        <item name="android:textColorPrimary">@color/darkgreen</item>
+        <item name="colorAccent">@color/darkorchid</item>
     </style>
 
-    <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
-    	<!-- All customizations that are NOT specific to a particular API-level can go here. -->
-    </style>
     <!-- 星星的特效  -->
     <style name="myRatingBar" parent="@android:style/Widget.RatingBar">   
              
